[docu] update user api doc
